--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -18,8 +18,8 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , containers == 0.5.7.1
-                     , dates == 0.2.2.1
                      , hxt == 9.3.1.16
+                     , time == 1.6.0.1
   default-language:    Haskell2010
 
 executable clecbit-exe
