--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -36,6 +36,7 @@ test-suite clecbit-test
   main-is:             Spec.hs
   build-depends:       base
                      , clecbit
+                     , HUnit == 1.5.0.0
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
