--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -36,7 +36,10 @@ test-suite clecbit-test
   main-is:             Spec.hs
   build-depends:       base
                      , clecbit
+                     , containers == 0.5.7.1
                      , HUnit == 1.5.0.0
+                     , hxt == 9.3.1.16
+                     , time == 1.6.0.1
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
