--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -20,6 +20,7 @@ library
                      , containers == 0.5.7.1
                      , hxt == 9.3.1.16
                      , time == 1.6.0.1
+                     , HTTP == 4000.3.7
   default-language:    Haskell2010
 
 executable clecbit-exe
