--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,7 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps: [HTTP-4000.3.7]
 
 # Override default flag values for local packages and extra-deps
 flags: {}
