--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -1,5 +1,5 @@
 name:                clecbit
-version:             0.1.0.0
+version:             0.2.0.0
 -- synopsis:
 -- description:
 homepage:            https://github.com/githubuser/clecbit#readme
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     ClecBit.XML
   build-depends:       base >= 4.7 && < 5
                      , containers == 0.5.7.1
                      , hxt == 9.3.1.16
