--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -16,11 +16,14 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     ClecBit.XML
+                     , ClecBit.Bet
   build-depends:       base >= 4.7 && < 5
                      , containers == 0.5.7.1
                      , hxt == 9.3.1.16
                      , time == 1.6.0.1
                      , HTTP == 4000.3.7
+                     , hbet == 0.2.3.0
+                     , split == 0.2.3.2
   default-language:    Haskell2010
 
 executable clecbit-exe
