--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -1,5 +1,5 @@
 name:                clecbit
-version:             0.2.0.0
+version:             0.2.1.0
 -- synopsis:
 -- description:
 homepage:            https://github.com/vquintin/clecbit#readme
@@ -18,10 +18,11 @@ library
   exposed-modules:     ClecBit.XML
                      , ClecBit.Bet
   build-depends:       base >= 4.7 && < 5
+                     , bytestring == 0.10.8.1
                      , containers == 0.5.7.1
                      , hxt == 9.3.1.16
                      , time == 1.6.0.1
-                     , HTTP == 4000.3.7
+                     , http-conduit == 2.2.3.2
                      , hbet == 0.2.3.0
                      , split == 0.2.3.2
   default-language:    Haskell2010
