--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-8.21
+resolver: lts-9.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -43,10 +43,7 @@ packages:
   extra-dep: true
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: [ HTTP-4000.3.7
-            , hbet-0.2.3.0
-            , split-0.2.3.2
-            ]
+extra-deps: [ hbet-0.2.3.0 ]
 
 # Override default flag values for local packages and extra-deps
 flags: {}
@@ -72,4 +69,4 @@ extra-package-dbs: []
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
 nix:
-  packages: [git]
+  packages: [binutils, git, zlib]
