--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -23,8 +23,9 @@ library
                      , hxt == 9.3.1.16
                      , time == 1.6.0.1
                      , http-conduit == 2.2.3.2
-                     , hbet == 0.2.3.0
+                     , hbet == 0.3.3.9
                      , split == 0.2.3.2
+                     , text == 1.2.2.2
   default-language:    Haskell2010
 
 executable clecbit-exe
