--- a/clecbit.cabal
+++ b/clecbit.cabal
@@ -17,6 +17,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     ClecBit.XML
                      , ClecBit.Bet
+  other-modules:       ClecBit.Parse.Football
+                     , ClecBit.Parse.Parsable
   build-depends:       base >= 4.7 && < 5
                      , bytestring == 0.10.8.1
                      , containers == 0.5.7.1
